<resources>
    <string name="app_name">GhostCall</string>
    <string name="ghostcall_title">ghostcall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tour_screen"></string>
    <string name="title_activity_verification_screen"></string>
    <string name="create_ghost_number">Create Ghost Number</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="phone_book">Phonebook</string>
    <string name="faq_support">FAQ / Support</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_code_verification_screen"></string>
    <string name="take_tour">Take Tour</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="verify_number">Verify your number</string>
    <string name="numbers_only">*US &amp; Canada numbers only.</string>
    <string name="done">Verify</string>
    <string name="route_text">Ghost Call routes calls to your number while keeping it private. You can also send calls from your real number if you want.</string>
    <string name="code_verification">Code Verification</string>
    <string name="title_activity_home_screen">GhostCall</string>
    <string name="your_number">Your Number</string>
    <string name="title_activity_get_ghost_number_screen">GhostCall</string>
    <string name="title_activity_select_package_screen">GhostCall</string>
    <string name="title_activity_call_history_screen">GhostCall</string>
    <string name="title_activity_history_screen">GhostCall</string>
    <string name="title_activity_call_screen">GhostCall</string>
    <string name="title_activity_history_settings_screen">GhostCall</string>
    <string name="loading">Loading</string>
    <string name="agree_to_terms"> \n By verifying your number, you agree to our </string>
    <string name="terms_of_service"> \n \n <u>Terms of Service</u></string>
    <string name="lock_ghostcall">LOCK GHOSTCALL</string>
    <string name="unlock_ghostcall">UNLOCK GHOSTCALL</string>
    <string name="locking_ghostcall">Locking GhostCall will require you to enter pin code to access the app</string>
</resources>