<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.kickbackapps.ghostcall.ui.VerificationScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#22FFFFFF"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/verify_number"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/phoneCodeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/edittext_rectangle"
        android:digits="0123456789+"
        android:ellipsize="start"
        android:ems="15"
        android:gravity="center"
        android:hint="(888) 888-8888"
        android:inputType="number"
        android:maxLength="12"
        android:padding="15dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneCodeField"
        android:layout_centerHorizontal="true"
        android:text="@string/numbers_only"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phoneCodeField"
        android:layout_alignLeft="@+id/phoneCodeField"
        android:layout_alignRight="@+id/phoneCodeField"
        android:layout_alignStart="@+id/phoneCodeField"
        android:layout_below="@id/textView2"
        android:paddingTop="5dp"
        android:text="@string/route_text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/agree_to_terms_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:paddingTop="5dp"
        android:text="@string/agree_to_terms"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11sp"

        />

    <TextView
        android:id="@+id/termsOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:text="@string/terms_of_service"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_selector"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/spinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#55000000"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>


</RelativeLayout>
