<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/locking_ghostcall"
            android:textColor="@color/txt_light"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/xLarge"
        android:background="@drawable/ripple_background_red"
        android:onClick="onClick"
        android:text="@string/lock_ghostcall"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/xLarge"
        android:background="@drawable/ripple_background_green"
        android:onClick="onClick"
        android:text="@string/unlock_ghostcall"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>